--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -6,7 +6,7 @@
     </h2>
   </div>
   <div class=" subHeaderContent">
-    <div class="pull-right sharebuttonDiv"> 
+    <div class="pull-right sharebuttonDiv">
       <div class="btn-group btn-filter">
         <a class="btn btn-default" href="#" data-toggle="dropdown">
           {{ _('Filter by') }}
@@ -33,7 +33,7 @@
         </ul>
       </div>
     </div>
-    
+
     <h2 class="page-title">{{ _("Leads") }} </h2>
   </div>
 </div>
@@ -45,11 +45,11 @@
       </div>
     </div>
   </div>
-  
+
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
   <div class="" ng-show="immediateFailed">
-    <div class="col-md-12">  
+    <div class="col-md-12">
       <h1>Sign-in Button;</h1>
         <span id="signin">
                   <span id="myGsignin"></span>
@@ -57,14 +57,14 @@
     </div>
   </div>
   <div ng-show="isSignedIn">
-        
+
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
     <div class="row ">
-      <div class="col-md-9"> 
+      <div class="col-md-9">
         <a  href="/#/leads/new"  id="sample_editable_1_new" class="btn red newBtn">
-          {{ _("New Lead") }} 
-        </a>          
+          {{ _("New Lead") }}
+        </a>
       </div>
     <div class="col-md-9">
     <div class="row ">
@@ -75,8 +75,9 @@
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
-                <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name"><img ng-hide="lead.logo_img_id" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive img-thumbnail" src="/static/img/default_company.png" >
-                <img ng-show="lead.logo_img_id" alt="<%= lead.firstname %> <%= lead.lastname %>" class="angel_image" ng-src="https://docs.google.com/uc?id=<%= lead.logo_img_id %>" data-hasqtip="2">
+                <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
+                <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-resonsive img-thumbnail" src="/static/img/avatar_contact.jpg" >
+                <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-thumbnail" ng-src="<%=lead.profile_img_url%>" data-hasqtip="2">
                 </a>
               </div>
               <div class="text">
@@ -87,10 +88,10 @@
                 </div>
                 <div class="pitch">
                   <span  class="contact-title" >
-                    Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %> 
+                    Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %>
                   </span>
                   <span ng-show="lead.status" class="contact-title" >
-                    Status: 
+                    Status:
                     <a class="desc" href="/#/search/type:Lead <%=lead.status%>">
                       #<%=lead.status %>
                     </a>
@@ -100,7 +101,7 @@
                       #<%=lead.title%>
                     </a>
                   </span>
-                  <span ng-show="lead.company"> 
+                  <span ng-show="lead.company">
                     <span ng-show="lead.title" class="contact-title">
                       at
                     </span>
@@ -120,7 +121,7 @@
             </div>
           </div>
         </div>
-        
+
         <div ng-show="isFiltering * !leads" data-span="all" class="" data-tablet="span6" data-desktop="span12">
           <div class="dashboard-stat cards" >
             <div class="blank_slate_arrow"></div>
@@ -167,7 +168,7 @@
                       <%= tag_item.name %>
                   </span>
                   <span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
-                      <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>  
+                      <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>
                   </span>
                   <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                     <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
@@ -177,7 +178,7 @@
               </li>
               <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
                 <a ng-click="" class="btn-link addAnotherPhone">
-                  <i class="fa fa-tags"></i>  Add a new label 
+                  <i class="fa fa-tags"></i>  Add a new label
                 </a>
               </li>
             </ul>
@@ -209,7 +210,7 @@
       </div>
       </div>
     </div>
-      <!-- END PAGE CONTAINER--> 
+      <!-- END PAGE CONTAINER-->
 </div>
 <script type="text/javascript">
   $("#select2_sample2").select2({
@@ -231,11 +232,10 @@
         }
     }
     handleUniform();
-              
-    $('.waterfall').waterfall({ 
-        colMinWidth: 200, 
+
+    $('.waterfall').waterfall({
+        colMinWidth: 200,
         defaultContainerWidth: 800,
         autoresize: true
       });
 </script>
-
