--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -114,16 +114,16 @@
                     <a ng-click="selectedTab = 8;">Send an Email</a>
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 3}">
-                    <a ng-click="waterfall(); selectedTab = 3;">Contacts</a>
+                    <a ng-click="waterfallTrigger(); selectedTab = 3;">Contacts</a>
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 7}">
-                    <a ng-click="waterfall();selectedTab = 7;">Attach Documents</a>
+                    <a ng-click="waterfallTrigger(); selectedTab = 7;">Attach Documents</a>
                   </li>
                   <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                     <a ng-click="selectedTab = 4;">Needs</a>
                   </li> -->
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 5}">
-                    <a ng-click="selectedTab = 5;">Opportunities</a>
+                    <a ng-click=" selectedTab = 5; waterfallTrigger();" ng-mouseup="test">Opportunities</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 6}">
                     <a ng-click="selectedTab = 6;">Cases</a>
@@ -228,11 +228,11 @@
                                         <form class="form-inline newLeadForm" role="form">
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
-                                            <select ng-model="phone.type" class="form-control">
+                                            <select ng-model="phone.type_number" class="form-control">
                                               <option value="home" selected="selected" >{{_('home')}}</option>
-                                              <option>{{_('work')}}</option>
-                                              <option>{{_('mobile')}}</option>
-                                              <option>{{_('other')}}</option>
+                                              <option value="work">{{_('work')}}</option>
+                                              <option value="mobile">{{_('mobile')}}</option>
+                                              <option value="other">{{_('other')}}</option>
                                             </select>
                                           </div>
                                           <div class="form-group sm-group" style="">
@@ -510,7 +510,7 @@
 
                          <div class="btn-group relbutton">
 
-                                <button ng-click="addOppModal()" id="sample_editable_1_new" class="btn red">
+                                <button ng-click="test()" id="sample_editable_1_new" class="btn red">
                                 Add opportunity
                                 </button>
                           </div>
@@ -518,77 +518,66 @@
                             <div class="row">
                               <!-- ngRepeat: opp in opportunities -->
                                <div class="col-md-12 waterfall3" ng-hide="blankStateaccount">
-                                  <div  ng-repeat="opportunity in opportunities"  class="rightcards cardElement"  >
-                                          <div class="detailsSection">
-                                            <div class="head">
+                                  <div  ng-repeat="opportunity in opportunities"  class=" cardElement"  >
+                  <div class="detailsSection">
+                    <div class="head">
 
-                                                <div class="row">
-                                                  <div class="col-md-2 col-sm-2 col-xs-12 hidden-xs">
+                        <div class="row">
+                          <div class="col-md-12 col-xs-5">
+                            <div class="stage" >
+                                <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability"></div>
+                                <div class="oppStage col-md-12">
+                                  <span><%=opportunity.current_stage.name%></span><br>
+                                  <span><%=opportunity.current_stage.probability%> %</span>
 
-                                                    <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability"></div>
-                                                    <div class="oppStage">
-                                                      <span><%=opportunity.current_stage.name%></span><br>
-                                                      <span><%=opportunity.current_stage.probability%> %</span>
+                                </div>
+                            </div>
+                          </div>
+                          <div class="oppDetails col-md-12 col-xs-7">
+                            <div class="col-md-12">
+                              <div class="row">
+                                <div class="col-md-12">
+                                  <div class="oppDescription">
+                                    <h3>
+                                      <a href="/#/opportunities/show/<%= opportunity.id %>"><%= opportunity.name %></a>
+                                    </h3>
+                                    <p class="description ellipsis">
+                                        <%= opportunity.description %>
+                                          <i></i>
+                                    </p>
 
-                                                    </div>
-                                                  </div>
-                                                  <div class="col-md-7 col-sm-7 col-xs-12" style="border-left: 1px solid rgb(218, 218, 218);">
-                                                    <div class="row">
-                                                      <!-- <div class="col-md-3 col-sm-3 col-xs-6 col-xs-offset-3 oppAccount">
-                                                          <div class="pic">
-                                                                       <img alt="test" class="img-responsive img-thumbnail" ng-src="/static/img/default_company.png" src="/static/img/default_company.png">
-                                                           </div>
-                                                      </div> -->
-                                                      <div class="col-md-9 col-sm-9 col-xs-12">
-                                                        <div class="oppDescription">
-                                                          <h3>
-                                                            <a href=""><%= opportunity.name %></a>
-                                                          </h3>
-                                                          <!-- <span class="accountName">
-                                                            NearBee
-                                                          </span> -->
-                                                          <!-- <span class="industry">
-                                                            Engineering
-                                                          </span>  -->
-                                                          <p class="description ellipsis">
-                                                              <%= opportunity.description %>
-                                                                <i></i>
-                                                          </p>
-
-                                                        </div>
-
-                                                      </div>
-                                                    </div>
-                                                  </div>
-                                                  <div class="visible-xs col-xs-6">
-                                                    <div easypiechart class="chart" options="chartOptions" percent="opportunity.current_stage.probability">
-                                                      
-                                                    </div>
-                                                  </div>
-                                                  <div class="col-md-3 col-sm-3 col-xs-6">
-                                                      <div class="oppPrice">
-                                                        <%= opportunity.currency %><%= opportunity.amount_total %>
-                                                        <p class="amount-details">
-                                                            <%= opportunity.duration %> × <%= opportunity.amount_per_unit %>/<%= opportunity.duration_unit %>
-                                                        </p>
-                                                      </div>
-
-                                                      <div class="oppEstDate">
-                                                        Estimated close date:
-                                                        <%= opportunity.duration %>
-                                                      </div>
-
-                                                  </div>
-                                                </div>
-                                            </div>
-                                          </div>
-                                          <div class="tagsSection" ng-class="{hidden: contact.tags==null}">
-                                              <div class="sectionContent">
-                                                   <a ng-repeat="tag in contact.tags" href="/#/search/type:contact tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
-                                                   </a>
-                                              </div>
-                                          </div>
                                   </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-12 col-sm-12">
+                                <div class="oppPrice">
+                                  <span><%= opportunity.currency %></span>
+                                  <span><%= opportunity.amount_total %></span>
+                                  <p class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
+                                      <%= opportunity.duration %> × <%= opportunity.amount_per_unit %>/<%= opportunity.duration_unit %>
+                                  </p>
+                                </div>
+
+                                <div class="oppEstDate">
+                                  Estimated close date:
+                                </div>
+                                <div class="oppEstDate">
+                                  <%=opportunity.closed_date | date:'MMMM dd, yyyy'%>
+                                </div>
+
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="tagsSection" ng-class="{hidden: contact.tags==null}">
+                      <div class="sectionContent">
+                           <a ng-repeat="tag in contact.tags" href="/#/search/type:contact tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+                           </a>
+                      </div>
+                  </div>
+        </div>
                               </div>
                               <div ng-show="blankStateopportunity" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12" style="">
                                <div class="dashboard-stat cards">
@@ -1682,6 +1671,11 @@
               autoresize: true
           });
   $('.waterfall2').waterfall({
+              colMinWidth: 210,
+              defaultContainerWidth: 840,
+              autoresize: true
+          });
+   $('.waterfall3').waterfall({
               colMinWidth: 210,
               defaultContainerWidth: 840,
               autoresize: true
