--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -186,7 +186,7 @@
                         <div class="stage-chart-block">
                           <div class="col-md-5 ">
                             <div class="stage" >
-                              <div easypiechart class="chart"  options="chartOptions" percent="opportunity.current_stage.probability"></div>                         
+                              <div easypiechart class="chart"  options="chartOptions" percent="opportunity.current_stage.probability"></div>
                               <div class="oppStage  col-md-12">
                                 <span><%=opportunity.current_stage.name%></span><br>
                                 <span><%=opportunity.current_stage.probability%> %</span>
@@ -200,7 +200,7 @@
                                       <%= opportunity.duration %> × <%= opportunity.amount_per_unit| customCurrency:"":",":".":0 %>/<%= opportunity.duration_unit %>
                                   </p>
                            </div>
-                          
+
                         </div>
                         <div class="row padding-bottom-15">
                           <div class="col-md-12">
@@ -208,7 +208,7 @@
 
                                 <div class="col-md-12">
 
-                                  <select ng-model="opportunity.current_stage" ng-change="updateOpportunity({'id':opportunity.id,'current_stage':{'name':opportunity.current_stage}})" ng-options="opps as opps.name + ' - ( ' + opps.probability + '% )'   for opps in opportunitystages track by opps.probability" class="form-control">
+                                  <select ng-model="opportunity.current_stage" ng-change="updateOpportunityStage()" ng-options="opps as opps.name + ' - ( ' + opps.probability + '% )'   for opps in opportunitystages track by opps.probability" class="form-control">
                                   </select>
                                 </div>
                             </div>
