before pull request and working on opportunity show
Former-commit-id: a80ef01d19f81890788c23f05f296203791d0e1c

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -199,6 +199,13 @@
                                   <p class="amount-details" ng-show="opportunity.duration_unit!='fixed'">
                                       <%= opportunity.duration %> × <%= opportunity.amount_per_unit| customCurrency:"":",":".":0 %>/<%= opportunity.duration_unit %>
                                   </p>
+                                  <div class="oppEstDate">
+                                     Estimated close date:
+                                  </div>
+                                  <div class="oppEstDate">
+                                    <%=opportunity.closed_date | date:'MMMM dd, yyyy'%>
+                                  </div>
+
                            </div>
 
                         </div>
