pull from iogrow
Former-commit-id: 945932529dfa3292eea0288e7db011b1951b9c0f

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -58,7 +58,7 @@
                       <span  style="">
                         Contact name:
                         <a class="tag ng-binding" href="http://localhost:8090/#/accounts/show/<%= opportunity.account.id %>">
-                          jib contact name
+                          <%= opportunity.contact.firstname %>
                         </a>
                       </span>
                   </div>
