--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -47,7 +47,7 @@
               <div class="pic">
                   <img alt="<%=account.name%>" class=" img-responsive img-thumbnail" ng-src="<%=imageSrc%>">
                </div>
-               <a ng-show="showUpload" ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
+               <a ng-show="showUpload" ng-click="createLogoPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal" style="display: none;">
                  <img src="/static/img/upload_logo.png">
                </a>
             </div>
