fixing inlineedit form icons position
Former-commit-id: 690c6b25b922334e9e613efa8d2e3f7aec247e44

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -212,7 +212,7 @@
                                   <div class="col-md-12">
                                     <div class="form-group">
 
-                                        <div class="col-md-12">
+                                        <div class="">
                                           <select ng-model="stage_selected" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages " class="form-control selector-margin" >
                                             <option value="">-- choose Stage --</option>
                                           </select>
