--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -219,7 +219,7 @@
                             </div>
                           </li>
                           <li ng-repeat="custom in infonodes.customfields">
-                                    <span>
+                                    <span editoptions editdataattr="deleteInfonode('<%=custom.entityKey%>','customfields')">
                                     <%= custom.fields[0].field%>  : <%= custom.fields[0].value%> </span>
 
                           </li>
