--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -225,7 +225,7 @@
                                     <p>{{ _('Estimated closed date') }}:</p>
                                     <div class="form-group row">
                                         <div class="col-md-12">
-                                            <datetimepick ng-model='opportunity.closed_date' class="" label-format='EEEE, MMMM d, yyyy'></datetimepick>
+                                            <datetimepick on-change="test()" ng-model='opportunity.closed_date' class="" label-format='EEEE, MMMM d, yyyy'></datetimepick>
                                         </div>
                                     </div>
                                   </div>
