link to account, contact on Opportunity show page
Former-commit-id: 48e2b00fb93614d0161b9445b7723bb40b525b80

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -50,14 +50,14 @@
                   <div class="oppRelatedTo">
                      <span ng-show="opportunity.account.name" style="">
                         Account name:
-                        <a class="tag ng-binding" href="http://localhost:8090/#/accounts/show/<%= opportunity.account.id %>">
+                        <a class="tag ng-binding" href="/#/accounts/show/<%= opportunity.account.id %>">
                           <%= opportunity.account.name %>
                         </a>
                       </span>
                       <br>
                       <span  style="">
                         Contact name:
-                        <a class="tag ng-binding" href="http://localhost:8090/#/accounts/show/<%= opportunity.account.id %>">
+                        <a class="tag ng-binding" href="/#/contacts/show/<%= opportunity.contact.id %>">
                           <%= opportunity.contact.firstname %> <%= opportunity.contact.firstname %>
                         </a>
                       </span>
