before pull from iogrow
Former-commit-id: 1fdee66e3ec45c4058528e525918f51a2e878c7b

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -134,7 +134,7 @@
       <div class="col-md-12 showPage taskShowHead margin-bottom-15">
             <h2 class="page-title showTaskTitle" ng-class="{task_closed: task.status=='closed'}">
              <span editable-text="task.title"  ng-model='task.title' onbeforesave="inlineUpdateTask(task.id,task.title)">
-              <%=task.title%> 
+              <%=document.title%> 
              </span>
               
             </h2>
